# ibde

./: CMakeLists.txt  README.md  TODO
inc/: BikeHolonomic.h  BikeHolonomic_priv.h  BikeNonHolonomic.h  BikeNonHolonomic_priv.h  BikeParameters.h  BikeParameters_priv.h  BikeTurnRadii.h  BikeTurnRadii_priv.h  ConvertBikeParameters.h  ConvertBikeParameters_priv.h  CylindricalGyrostatParameters.h  CylindricalGyrostatParameters_priv.h  InertiaParameters.h  InertiaParameters_priv.h  MeijaardBikeParameters.h  MeijaardBikeParameters_priv.h  WheelAssemblyParameters.h  WheelAssemblyParameters_priv.h  gyrostatparameterform.h  mainwindow.h  meijaardparameterform.h  parameterwidget.h  vtkHolonomicConstraint.h  vtkisosurfacewidget.h
src/: CMakeLists.txt  gyrostatparameterform.cc  main.cc  mainwindow.cc  meijaardparameterform.cc  parameterwidget.cc  testConfigurationSurface.cc  vtkHolonomicConstraint.cc  vtkisosurfacewidget.cc
